# cyberchat-backend

./: main.py  pyproject.toml
ai/: build_knowledge.py  chatbot.py  knowledge.txt  rag.py
api/: wazuh_client.py
tests/: test_rag.py
utils/: config.py  logger.py
vector_db/: chroma.sqlite3
